--- a/index.html
+++ b/index.html
@@ -518,6 +518,20 @@ Every problem may not now have a solution, but keep in mind that every solution 
                 <h4>Co-founder HACK/ Club, GECA </h4>
               </div>
             </div><!-- End testimonial item -->
+            
+            
+              <div class="swiper-slide">
+              <div class="testimonial-item" data-aos="fade-up">
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                   I enjoy socket programming, and the way it has been implemented here is fantastic. The use of proper ports is required. I used it, as well as willling for advanced to appear. Excellent effort, Vedz !!
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/test6.jpg" class="testimonial-img" alt="">
+                <h3>Anjali Dhole</h3>
+                <h4>Class Representative ,GECA</h4>
+              </div>
+            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
