--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -143,7 +143,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright"
        Designed by <strong><span>Vedant Wagh</span></strong>
       </div>
       <div class="credits">
