--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 February 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://github.com/waghvedant</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://github.com/waghvedant"</a> github.com/waghvedant </span> </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>8806702557</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad, Maharashtra</span></li>
                 </ul>
@@ -524,7 +524,7 @@ Every problem may not now have a solution, but keep in mind that every solution 
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                   I enjoy socket programming, and the way it has been implemented here is fantastic. The use of proper ports is required. I used it, as well as willling for advanced to appear. Excellent effort, Vedz !!
+                   I enjoy socket programming, and the way it has been implemented here is fantastic. The use of proper ports is required. I used it, as well as willling for advanced to appear. Excellent effort, Vedant !!
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/test6.jpg" class="testimonial-img" alt="">
@@ -552,7 +552,7 @@ Every problem may not now have a solution, but keep in mind that every solution 
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                 I enjoy chatting, and this TwoChat with mail feature is ideal. We merely need to check our system's IP address and Internet connection. It is straightforward but significant. Excellent work, broher:)
+                 I enjoy chatting, and this TwoChat with mail feature is ideal. We merely need to check our system's IP address and Internet connection. It is straightforward but significant. Excellent work, brother:)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/test4.jpg" class="testimonial-img" alt="">
