--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 February 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://github.com/waghvedant"</a> github.com/waghvedant </span> </li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://github.com/waghvedant">github.com/waghvedant </a> </span> </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>8806702557</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad, Maharashtra</span></li>
                 </ul>
